@@ -6206,7 +6206,7 @@
   </chapter>
 
   <chapter id="gramps-settings">
-    <!-- $Id$ -->
+    <!-- $Id: gramps-manual.xml 7306 2006-09-09 17:10:13Z dallingham $ -->
 
     <title>Settings</title>
 
@@ -6532,7 +6532,7 @@
     </sect1>
   </chapter>
 
-  <!-- $Id$ -->
+  <!-- $Id: gramps-manual.xml 7306 2006-09-09 17:10:13Z dallingham $ -->
 
   <appendix id="faq">
     <title>Frequently Asked Questions</title>
@@ -6937,7 +6937,7 @@
   </appendix>
 
   <appendix id="append-keybind">
-    <!-- $Id$ -->
+    <!-- $Id: gramps-manual.xml 7306 2006-09-09 17:10:13Z dallingham $ -->
 
     <title>Keybindings reference</title>
 
@@ -7255,7 +7255,7 @@
   </appendix>
 
   <appendix id="append-filtref">
-    <!-- $Id$ -->
+    <!-- $Id: gramps-manual.xml 7306 2006-09-09 17:10:13Z dallingham $ -->
 
     <title>Filter rules reference</title>
 
@@ -7862,7 +7862,7 @@
   </appendix>
 
   <appendix id="append-cmdline">
-    <!-- $Id$ -->
+    <!-- $Id: gramps-manual.xml 7306 2006-09-09 17:10:13Z dallingham $ -->
 
     <!-- =============== Appendices Subsection ================ -->
 
@@ -8392,7 +8392,7 @@
   <!-- ENTITY bugs SYSTEM "bugs.xml" -->
 
   <appendix id="gramps-about">
-    <!-- $Id$ -->
+    <!-- $Id: gramps-manual.xml 7306 2006-09-09 17:10:13Z dallingham $ -->
 
     <title>About GRAMPS</title>
 
@@ -8401,209 +8401,75 @@
 
     <para>The somewhat incomplete list of contributors includes (in
     alphabetical order): <itemizedlist>
-        <listitem>
-          <para>Larry Allingham</para>
-        </listitem>
+<listitem><para>Tim Allen</para></listitem>
+<listitem><para>Larry Allingham</para></listitem>
+<listitem><para>Jens Arvidsson</para></listitem>
+<listitem><para>Kees Bakker</para></listitem>
+<listitem><para>Marcos Bedinelli</para></listitem>
+<listitem><para>Wayne Bergeron</para></listitem>
+<listitem><para>Stefan Bjork</para></listitem>
+<listitem><para>Douglas S. Blank</para></listitem>
+<listitem><para>Radu Bogdan Mare</para></listitem>
+<listitem><para>Alexander Bogdashevsky</para></listitem>
+<listitem><para>Richard Bos</para></listitem>
+<listitem><para>Matt Brubeck</para></listitem>
+<listitem><para>Nathan Bullock</para></listitem>
+<listitem><para>Lorenzo Cappelletti</para></listitem>
+<listitem><para>Pier Luigi Cinquantini</para></listitem>
+<listitem><para>Bruce J. DeGrasse</para></listitem>
+<listitem><para>Daniel Durand</para></listitem>
+<listitem><para>Alexandre Duret-Lutz</para></listitem>
+<listitem><para>Billy C. Earney</para></listitem>
+<listitem><para>Baruch Even</para></listitem>
+<listitem><para>Bernd Felsche</para></listitem>
+<listitem><para>Egyeki Gergely</para></listitem>
+<listitem><para>Michel Guitel</para></listitem>
+<listitem><para>Steve Hall</para></listitem>
+<listitem><para>David R. Hampton</para></listitem>
+<listitem><para>Martin Hawlisch</para></listitem>
+<listitem><para>Anton Huber</para></listitem>
+<listitem><para>Frode Jemtland</para></listitem>
+<listitem><para>Mark Knoop</para></listitem>
+<listitem><para>Greg Kuperberg</para></listitem>
+<listitem><para>Arkadiusz Lipiec</para></listitem>
+<listitem><para>Lars Kr. Lundin</para></listitem>
+<listitem><para>Radek Malcic</para></listitem>
+<listitem><para>Benny Malengier</para></listitem>
+<listitem><para>Leonid Mamtchenkov</para></listitem>
+<listitem><para>Brian Matherly</para></listitem>
+<listitem><para>Tino Meinen</para></listitem>
+<listitem><para>Serge Noiraud</para></listitem>
+<listitem><para>Frederick Noronha</para></listitem>
+<listitem><para>Jeffrey C. Ollie</para></listitem>
+<listitem><para>Jiri Pejchal</para></listitem>
+<listitem><para>Donald A. Peterson</para></listitem>
+<listitem><para>Guillaume Pratte</para></listitem>
+<listitem><para>Alexandre Prokoudine</para></listitem>
+<listitem><para>Laurent Protois</para></listitem>
+<listitem><para>Matthieu Pupat</para></listitem>
+<listitem><para>Jérôme Rapinat</para></listitem>
+<listitem><para>Trevor Rhodes</para></listitem>
+<listitem><para>Alexander Roitman</para></listitem>
+<listitem><para>Soren Roug</para></listitem>
+<listitem><para>Jason Salaz</para></listitem>
+<listitem><para>Julio Sanchez</para></listitem>
+<listitem><para>Bernd Schandl</para></listitem>
+<listitem><para>Martin Senftleben</para></listitem>
+<listitem><para>Yaakov Selkowitz</para></listitem>
+<listitem><para>Gary Shao</para></listitem>
+<listitem><para>Arturas Sleinius</para></listitem>
+<listitem><para>Jim Smart</para></listitem>
+<listitem><para>Steve Swales</para></listitem>
+<listitem><para>Eero Tamminen</para></listitem>
+<listitem><para>Samuel Tardieu</para></listitem>
+<listitem><para>Richard Taylor</para></listitem>
+<listitem><para>James Treacy</para></listitem>
+<listitem><para>Lubo Vasko</para></listitem>
+<listitem><para>Sebastian Voecking</para></listitem>
+<listitem><para>Xing Wang</para></listitem>
+<listitem><para>Tim Waugh</para></listitem>
+<listitem><para>Jesper Zedlitz</para></listitem>
 
-        <listitem>
-          <para>Jens Arvidsson</para>
-        </listitem>
-
-        <listitem>
-          <para>Marcos Bedinelli</para>
-        </listitem>
-
-        <listitem>
-          <para>Douglas S. Blank</para>
-        </listitem>
-
-        <listitem>
-          <para>Radu Bogdan Mare</para>
-        </listitem>
-
-        <listitem>
-          <para>Alexander Bogdashevsky</para>
-        </listitem>
-
-        <listitem>
-          <para>Richard Bos</para>
-        </listitem>
-
-        <listitem>
-          <para>Nathan Bullock</para>
-        </listitem>
-
-        <listitem>
-          <para>Lorenzo Cappelletti</para>
-        </listitem>
-
-        <listitem>
-          <para>Pier Luigi Cinquantini</para>
-        </listitem>
-
-        <listitem>
-          <para>Bruce J. DeGrasse</para>
-        </listitem>
-
-        <listitem>
-          <para>Alexandre Duret-Lutz</para>
-        </listitem>
-
-        <listitem>
-          <para>Billy C. Earney</para>
-        </listitem>
-
-        <listitem>
-          <para>Baruch Even</para>
-        </listitem>
-
-        <listitem>
-          <para>Bernd Felsche</para>
-        </listitem>
-
-        <listitem>
-          <para>Egyeki Gergely</para>
-        </listitem>
-
-        <listitem>
-          <para>Michel Guitel</para>
-        </listitem>
-
-        <listitem>
-          <para>Steve Hall</para>
-        </listitem>
-
-        <listitem>
-          <para>David R. Hampton</para>
-        </listitem>
-
-        <listitem>
-          <para>Martin Hawlisch</para>
-        </listitem>
-
-        <listitem>
-          <para>Anton Huber</para>
-        </listitem>
-
-        <listitem>
-          <para>Frode Jemtland</para>
-        </listitem>
-
-        <listitem>
-          <para>Greg Kuperberg</para>
-        </listitem>
-
-        <listitem>
-          <para>Arkadiusz Lipiec</para>
-        </listitem>
-
-        <listitem>
-          <para>Lars Kr. Lundin</para>
-        </listitem>
-
-        <listitem>
-          <para>Radek Malcic</para>
-        </listitem>
-
-        <listitem>
-          <para>Leonid Mamtchenkov</para>
-        </listitem>
-
-        <listitem>
-          <para>Tino Meinen</para>
-        </listitem>
-
-        <listitem>
-          <para>Frederick Noronha</para>
-        </listitem>
-
-        <listitem>
-          <para>Jeffrey C. Ollie</para>
-        </listitem>
-
-        <listitem>
-          <para>Donald A. Peterson</para>
-        </listitem>
-
-        <listitem>
-          <para>Guillaume Pratte</para>
-        </listitem>
-
-        <listitem>
-          <para>Laurent Protois</para>
-        </listitem>
-
-        <listitem>
-          <para>Matthieu Pupat</para>
-        </listitem>
-
-        <listitem>
-          <para>Trevor Rhodes</para>
-        </listitem>
-
-        <listitem>
-          <para>Alexander Roitman</para>
-        </listitem>
-
-        <listitem>
-          <para>Jason Salaz</para>
-        </listitem>
-
-        <listitem>
-          <para>Julio Sanchez</para>
-        </listitem>
-
-        <listitem>
-          <para>Bernd Schandl</para>
-        </listitem>
-
-        <listitem>
-          <para>Martin Senftleben</para>
-        </listitem>
-
-        <listitem>
-          <para>Gary Shao</para>
-        </listitem>
-
-        <listitem>
-          <para>Jim Smart</para>
-        </listitem>
-
-        <listitem>
-          <para>Steve Swales</para>
-        </listitem>
-
-        <listitem>
-          <para>Eero Tamminen</para>
-        </listitem>
-
-        <listitem>
-          <para>Samuel Tardieu</para>
-        </listitem>
-
-        <listitem>
-          <para>Richard Taylor</para>
-        </listitem>
-
-        <listitem>
-          <para>James Treacy</para>
-        </listitem>
-
-        <listitem>
-          <para>Sebastian Voecking</para>
-        </listitem>
-
-        <listitem>
-          <para>Xing Wang</para>
-        </listitem>
-
-        <listitem>
-          <para>Tim Waugh</para>
-        </listitem>
-
-        <listitem>
-          <para>Jesper Zedlitz</para>
-        </listitem>
       </itemizedlist> If you know of somebody else who should be listed here,
     please let us know.</para>
 
