@@ -1,3 +1,6 @@
+2006-10-11  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDisplay.py (help): Rename gramps-manual to gramps.
+
 2006-10-11  Brian Matherly  <brian@gramps-project.org>
 	* src/Mime/_WinMime.py: potential fix for #446
 
